fixed font smoothing issue on safari

--- a/styles.css
+++ b/styles.css
@@ -33,9 +33,11 @@
 }
 html, body{
 	font-family: 'Lato-Regular', sans-serif;
-	text-rendering: optimizeLegibility;
 	padding:0;
 	margin:0;
+}
+.safariFontFix{
+	-webkit-text-stroke: '0.5px';
 }
 body::-webkit-scrollbar {
 	width: 8px;
